# homophoner-talon

./: README.md  download_model.py  homophoner.py  homophoner.talon  pyproject.toml
.tests/: test-homophoner.py
