[project]
name = "homophoner-talon"
version = "0.1.0"
description = "select a homophone by explicitly saying a similar word to the homophone you are after"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "nltk>=3.9.2",
    "pip-system-certs>=5.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = ".tests/test-homophoner.py"
